rtest/tests/jsr335/Semantics/ConstructorReferenceAnalysis/ClassReferences/ShouldCompile/syntax01/Test.java
// .result=COMPILE_PASS

public class Test {
	
	interface A {
		String m();
	}
	
	public static void main(String[] arg) {
		A a = String::new;
	}

}